Wrap white space to prevent firefox shifting widget action items to next line.

--- a/enterprise/src/web/enterprise/components/widgets/WidgetHeader.css
+++ b/enterprise/src/web/enterprise/components/widgets/WidgetHeader.css
@@ -2,7 +2,6 @@
     font-size: 18px;
     height: 25px;
     text-overflow: ellipsis;
-    white-space: nowrap;
     margin-bottom: 5px;
 }
 
